# nmf-ivf

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  configure.sh  eval.py  main.cpp  mini_batch_nmf.h  vcpkg.json
.github/workflows/: ci.yml
src/: main.cc  main.cpp  run.h
src/clustering/: nmf.cpp  nmf.h
src/experiments/: index_coverage_analysis.cpp  k_sweep.cpp  nmf_evaluation.h  recall_analysis.cpp  sampling_recall_analysis.cpp
src/index/: nmf_index.cpp  nmf_index.h
src/index/backend/: adaptive.cpp  adaptive.h  base.cpp  base.h  naive.cpp  naive.h
src/index/nmf/: base.cpp  base.h  hals_nmf.h  mu_nmf.h
src/nmf/: base.cpp  base.h  hals_nmf.cpp  hals_nmf.h  mu_nmf.cpp  mu_nmf.h
src/utils/: eigen_utils.h  hdf5_loader.h  hdf5_sparse_loader.h  hdf5_writer.h  index_eval.h
